test: Record the per-phase benchmark baseline
Captures encode, decode, query planning and query execution separately, so
that the comparison after the layout changes measures the change rather
than the machine. Notes why these figures are not row-comparable with the
whole-pipeline table and why an encode cost cannot be recovered from it by
subtraction.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>